--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "bootstart": "0.0.0",
     "bootstrap": "^4.6.0",
     "firebase": "^8.3.2",
+    "install": "^0.13.0",
     "jquery": "^3.6.0",
+    "not": "^0.1.0",
+    "npm": "^7.8.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
